validating data types, updating github ci