@@ -67,15 +67,26 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-tasks.named("bootBuildImage") {
-    builder = "paketobuildpacks/builder-jammy-tiny:latest"
+graalvmNative {
+    binaries {
+        main {
+            buildArgs.addAll([
+                    '--no-fallback',
+                    '--enable-preview',
+                    '-J-Xmx8g',
+                    '--parallelism=4',
+                    '--gc=G1',
+                    '--initialize-at-build-time=org.slf4j'
+            ])
+        }
+    }
+}
 
+tasks.named('bootBuildImage') {
+    builder = "paketobuildpacks/builder-jammy-base:latest"
     environment = [
-            "BP_JVM_VERSION": "24",
-            "BPL_JVM_HEAD_ROOM": "5"
-//            "BPL_SPRING_CLOUD_BINDINGS_DISABLED": "true",
-//            "BP_NATIVE_IMAGE_BUILD_ARGUMENTS": "-Ob",
-//            "BP_JVM_JLINK_ENABLED": "true"
+            "BP_NATIVE_IMAGE": "true",
+            "BP_JVM_VERSION": "24"
     ]
 }
 
